--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,6 @@
 
 $terminal-width: 40rem;
 
-@import url('../themes/nord.css'); //set default theme
 @include typography.set-font-size(24px, 16px, 18px); //set font sizes
 
 * {
@@ -12,17 +11,33 @@ $terminal-width: 40rem;
 	font-family: 'Menlo', 'Monaco', 'Input Mono', monospace !important;
 }
 
-header {
-	font-weight: 700;
+button {
+	cursor: pointer;
 }
 
-/* ============================== MAIN CONTENT ============================== */
+.highlight-btn {
+	margin: 0;
+	padding: 0;
+	background: none;
+	font-size: inherit;
+}
+
 @mixin flex($direction) {
 	display: flex;
 	flex-direction: $direction;
 	justify-content: space-between;
 }
 
+/* ============================== HEADER ============================== */
+#header {
+	@include flex(row);
+	width: 100%;
+	header {
+		font-weight: 700;
+	}
+}
+
+/* ============================== MAIN CONTENT ============================== */
 #container {
 	@include flex(column);
 	align-items: center;
@@ -33,6 +48,7 @@ header {
 #main {
 	@include flex(column);
 	width: $terminal-width;
+	margin-top: -40px;
 	gap: 1em;
 }
 
@@ -46,7 +62,7 @@ header {
 	gap: 1.2em;
 	padding: 1em;
 	padding-top: 1.5em;
-	border-radius: 8px;
+	border-radius: 6px;
 	#text {
 		line-height: 30px;
 	}
