--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url("../themes/nord.css");
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -97,7 +96,25 @@ footer {
   font-family: "Menlo", "Monaco", "Input Mono", monospace !important;
 }
 
-header {
+button {
+  cursor: pointer;
+}
+
+.highlight-btn {
+  margin: 0;
+  padding: 0;
+  background: none;
+  font-size: inherit;
+}
+
+/* ============================== HEADER ============================== */
+#header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+#header header {
   font-weight: 700;
 }
 
@@ -116,6 +133,7 @@ header {
   flex-direction: column;
   justify-content: space-between;
   width: 40rem;
+  margin-top: -40px;
   gap: 1em;
 }
 
@@ -133,7 +151,7 @@ header {
   gap: 1.2em;
   padding: 1em;
   padding-top: 1.5em;
-  border-radius: 8px;
+  border-radius: 6px;
 }
 #terminal #text {
   line-height: 30px;
