Fix file references

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,21 +2,21 @@
 	font-family: 'Input Mono';
 	font-style: normal;
 	font-weight: normal;
-	src: url('../../fonts/InputMono-Regular.ttf') format('ttf');
+	src: url('../fonts/InputMono-Regular.ttf') format('ttf');
 }
 
 @font-face {
 	font-family: 'Monaco';
 	font-style: normal;
 	font-weight: normal;
-	src: url('../../fonts/Monaco.woff') format('woff');
+	src: url('../fonts/Monaco.woff') format('woff');
 }
 
 @font-face {
 	font-family: 'Menlo';
 	font-style: normal;
 	font-weight: normal;
-	src: url('../../fonts/Menlo-Regular.woff') format('woff');
+	src: url('../fonts/Menlo-Regular.woff') format('woff');
 }
 
 @mixin set-font-size($header-font-size, $body-font-size, $input-font-size) {
