--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,10 @@ footer {
   font-size: 18px;
 }
 
+.highlight-btn {
+  font-size: 16px;
+}
+
 * {
   box-sizing: border-box !important;
   border: none;
@@ -133,14 +137,14 @@ button {
   flex-direction: column;
   justify-content: space-between;
   width: 40rem;
-  margin-top: -40px;
-  gap: 1em;
+  margin-top: -20px;
 }
 
 #status-bar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-bottom: 1.2em;
 }
 
 /* ============================== TERMINAL ============================== */
@@ -148,24 +152,24 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 1.2em;
   padding: 1em;
-  padding-top: 1.5em;
+  padding-top: 1.2em;
   border-radius: 6px;
 }
 #terminal #text {
   line-height: 30px;
+  padding-bottom: 1.2em;
 }
 
 #input-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 1em;
 }
 
 #terminal-input {
   flex-grow: 1;
+  margin-right: 1em;
   padding: 0.5em 0.8em 0.5em 0.8em;
   border-radius: 4px;
 }
@@ -187,13 +191,19 @@ button {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 1em;
+  }
+  #status-bar #modes {
+    padding-bottom: 1em;
   }
 
   #input-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+  #input-container #terminal-input {
+    margin-right: 0em;
+    margin-bottom: 0.5em;
   }
 
   header {
@@ -214,6 +224,10 @@ button {
 
   #redo-btn {
     font-size: 16px;
+  }
+
+  .highlight-btn {
+    font-size: 14px;
   }
 }
 
