--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,53 @@ table {
   font-weight: normal;
   src: url("../fonts/Menlo-Regular.woff") format("woff");
 }
+:root {
+  --bg-color: #242933;
+  --text-color: #ECEFF4;
+  --terminal-color: #2E3440;
+  --input-color: #3B4252;
+  --redo-color: #3B4252;
+  --highlight-color: #4d8ee9;
+  --correct-color: #A3BE8C;
+  --incorrect-color: #BF616A;
+  --neutral-color: #B38DAC;
+}
+
+body, #container {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+
+#terminal {
+  background-color: var(--terminal-color);
+}
+
+#terminal-input {
+  background-color: var(--input-color);
+  color: var(--text-color);
+}
+
+#redo-btn {
+  background-color: var(--redo-color);
+  color: var(--text-color);
+}
+
+.highlight-btn {
+  color: var(--highlight-color);
+}
+
+.correct {
+  color: var(--correct-color);
+}
+
+.incorrect {
+  color: var(--incorrect-color);
+}
+
+.neutral {
+  color: var(--neutral-color);
+}
+
 header {
   font-size: 24px;
 }
