Rename ids and fix responsive styles

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -19,9 +19,12 @@
 	src: url('../fonts/Menlo-Regular.woff') format('woff');
 }
 
-@mixin set-font-size($header-font-size, $body-font-size, $input-font-size) {
+@mixin set-font-size($title-font-size, $body-font-size, $input-font-size) {
 	header {
-		font-size: $header-font-size;
+		font-size: $body-font-size;
+	}
+	#title {
+		font-size: $title-font-size;
 	}
 	footer {
 		font-size: $body-font-size;
@@ -29,7 +32,7 @@
 	#main {
 		font-size: $body-font-size;
 	}
-	#terminal-input {
+	#input {
 		font-size: $input-font-size;
 	}
 	#redo-btn {
