--- a/css/main.css
+++ b/css/main.css
@@ -90,8 +90,7 @@ body, #container {
 #terminal {
   background-color: var(--terminal-color);
 }
-
-#terminal-input {
+#terminal #input {
   background-color: var(--input-color);
   color: var(--text-color);
 }
@@ -118,6 +117,10 @@ body, #container {
 }
 
 header {
+  font-size: 16px;
+}
+
+#title {
   font-size: 24px;
 }
 
@@ -129,7 +132,7 @@ footer {
   font-size: 16px;
 }
 
-#terminal-input {
+#input {
   font-size: 18px;
 }
 
@@ -158,14 +161,15 @@ button {
   font-size: inherit;
 }
 
-/* ============================== HEADER ============================== */
-#header {
+/* ============================== HEADER & FOOTER ============================== */
+header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  padding-bottom: 3em;
 }
-#header header {
+header #title {
   font-weight: 700;
 }
 
@@ -184,7 +188,6 @@ button {
   flex-direction: column;
   justify-content: space-between;
   width: 40rem;
-  margin-top: -20px;
 }
 
 #status-bar {
@@ -205,18 +208,17 @@ button {
 }
 #terminal #text {
   line-height: 30px;
-  padding-bottom: 1.2em;
 }
 
 #input-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-top: 1.2em;
 }
-
-#terminal-input {
+#input-container #input {
   flex-grow: 1;
-  margin-right: 1em;
+  margin-right: 1.2em;
   padding: 0.5em 0.8em 0.5em 0.8em;
   border-radius: 4px;
 }
@@ -227,9 +229,14 @@ button {
 }
 
 /* ============================== MEDIA QUERIES ============================== */
-@media (max-width: 40rem) {
+@media (max-width: 44rem) {
   #main {
     width: 95%;
+  }
+
+  footer {
+    padding-top: 3em;
+    padding-bottom: 1em;
   }
 }
 @media (max-width: 450px) {
@@ -248,12 +255,16 @@ button {
     flex-direction: column;
     justify-content: space-between;
   }
-  #input-container #terminal-input {
+  #input-container #input {
     margin-right: 0em;
     margin-bottom: 0.5em;
   }
 
   header {
+    font-size: 14px;
+  }
+
+  #title {
     font-size: 22px;
   }
 
@@ -265,7 +276,7 @@ button {
     font-size: 14px;
   }
 
-  #terminal-input {
+  #input {
     font-size: 16px;
   }
 
