--- a/css/main.css
+++ b/css/main.css
@@ -173,6 +173,11 @@ header #title {
   font-weight: 700;
 }
 
+footer {
+  padding-top: 3em;
+  padding-bottom: 1em;
+}
+
 /* ============================== MAIN CONTENT ============================== */
 #container {
   display: flex;
@@ -181,6 +186,7 @@ header #title {
   align-items: center;
   height: 100vh;
   padding: 1.5rem;
+  padding-bottom: 0;
 }
 
 #main {
@@ -232,11 +238,6 @@ header #title {
 @media (max-width: 44rem) {
   #main {
     width: 95%;
-  }
-
-  footer {
-    padding-top: 3em;
-    padding-bottom: 1em;
   }
 }
 @media (max-width: 450px) {
