--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,12 +39,18 @@ header {
 	}
 }
 
+footer {
+	padding-top: 3em;
+	padding-bottom: 1em;
+}
+
 /* ============================== MAIN CONTENT ============================== */
 #container {
 	@include flex(column);
 	align-items: center;
 	height: 100vh;
 	padding: 1.5rem;
+	padding-bottom: 0;
 }
 
 #main {
@@ -88,10 +94,6 @@ header {
 @media (max-width: $terminal-width + 4rem) {
 	#main {
 		width: 95%;
-	}
-	footer {
-		padding-top: 3em;
-		padding-bottom: 1em;
 	}
 }
 
